[package]
name = "myip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1"] }
futures = { version = "0.3.30", features = ["async-await", "std", "futures-executor"] }
openssl-sys = "0.9.99"
reqwest = { version = "0.11.23", features = ["rustls-tls", "tokio-util"] }
tokio = { version = "1.36.0", features = ["full"] }

[[bin]]
name = "myip"
path = "src/myip.rs"

[profile.release]
opt-level = "s"
strip = "symbols"